--- a/FriendLetter/Views/Home/Postcard.cshtml
+++ b/FriendLetter/Views/Home/Postcard.cshtml
@@ -14,10 +14,10 @@
         <h1>Hello From Afar</h1>
         
         <p><b>Dear @Model.Recipient,</b></p>
-        <p>How are you? I hope that you are having a nice weekend. I'm vacationing in the Iceland while I learn programming!</p>
-        <p>@Model.Recipient, you would not believe how cold it is here. I should have gone to Hawaii instead.</p>
+        <p>How are you? I hope that you are having a nice weekend. I'm vacationing in @Model.VacateLocation1, @Model.VacateLocation2, and @Model.VacateLocation3 while I learn programming!</p>
+        <p>@Model.Recipient, you would not believe how cold it is here in @Model.VacateLocation1. I should have gone to Hawaii alone instead.</p>
         <p>But I like programming a lot, so I've got that going for me.</p>
-        <p>Looking forward to seeing you soon. I'll bring you back a souvenir.</p>
+        <p>Looking forward to seeing you soon. I'll bring you back @Model.ItemSouvenir1, @Model.ItemSouvenir2, and @Model.ItemSouvenir3 as souvenirs when I get back from my vacation.</p>
         <p>Cheers,</p> 
         <p>Travel Enthusiast <b>@Model.Sender</b></p>
     </div>
